<package format="2">
    <name>starrobot_pid</name>
    <version>0.0.1</version>
    <description>starrobot PID dynamic_reconfigure</description>
    <author>fcz</author>
    <maintainer email="1170741585@gmail.com">star</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>starrobot_msgs</depend>
</package>
