<?xml version="1.0"?>
<package>
  <name>starrobot_udev</name>
  <version>0.0.1</version>
  <description>udev rule creator for ailirobot</description>

  <maintainer email="1170741585@gmail.com">StarsFu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
